--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,59 +2,52 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/Mainc"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vitlem.findmybeacon.MainActivity">
-
-    <Button
-        android:text="Scan"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:id="@+id/ScanB"
-        app:layout_constraintTop_toBottomOf="@+id/ListR"
-        android:layout_marginTop="48dp"
-        app:layout_constraintRight_toRightOf="@+id/activity_main" />
-
-    <Button
-        android:text="Stop"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:id="@+id/ScanS"
-        app:layout_constraintTop_toBottomOf="@+id/ListR"
-        android:layout_marginTop="48dp"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main"/>
-
-    <Button
-        android:text="Find"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:id="@+id/FindS"
-        app:layout_constraintTop_toBottomOf="@+id/ListR"
-        android:layout_marginTop="48dp"
-        app:layout_constraintRight_toLeftOf="@+id/ScanB"/>
-
-    <Button
-        android:text="Manage"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:id="@+id/ManageS"
-        app:layout_constraintTop_toBottomOf="@+id/ListR"
-        android:layout_marginTop="48dp"
-        app:layout_constraintLeft_toRightOf="@+id/ScanS"/>
+    android:minHeight="0dp"
+    android:minWidth="0dp"
+    app:layout_constraintHorizontal_bias="0">
 
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="500dp"
         android:id="@+id/ListR"
-        android:scrollbars="horizontal|vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="600dp"
         android:background="#8b8297a6"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:scrollbars="horizontal|vertical" />
 
-    <TableLayout android:layout_width="fill_parent"
-        android:id="@+id/tableLayout1" android:layout_height="wrap_content">
-    </TableLayout>
+    <Button
+        android:id="@+id/ScanS"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Stop"
+        app:layout_constraintBottom_toBottomOf="@+id/ListR"
+        app:layout_constraintLeft_toRightOf="@+id/FindS" />
+
+    <Button
+        android:id="@+id/FindS"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Find"
+        app:layout_constraintBottom_toBottomOf="@+id/ListR"
+        app:layout_constraintLeft_toRightOf="@+id/ScanB" />
+
+    <Button
+        android:id="@+id/ManageS"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Manage"
+        app:layout_constraintBottom_toBottomOf="@+id/ListR"
+        app:layout_constraintLeft_toRightOf="@+id/ScanS"
+        tools:layout_editor_absoluteX="2729dp" />
+
+    <Button
+        android:id="@+id/ScanB"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:text="Scan"
+        app:layout_constraintBottom_toBottomOf="@+id/ListR"
+        tools:layout_editor_absoluteX="16dp" />
 
 </android.support.constraint.ConstraintLayout>
